--- a/test-meteor.html
+++ b/test-meteor.html
@@ -3,12 +3,15 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
   {{> hello}}
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+  <div class="container">
+      <div>hello world 1</div>
+      <div>hello world 2</div>
+      <div>hello world 3</div>
+      <div>hello world 4</div>
+      <div>hello world 5</div>
+  </div>
 </template>
