--- a/test-meteor.html
+++ b/test-meteor.html
@@ -1,5 +1,5 @@
 <head>
-  <title>test-meteor</title>
+    <title>test-meteor</title>
 </head>
 
 <body>
@@ -7,11 +7,12 @@
 </body>
 
 <template name="hello">
-  <div class="container">
-      <div>hello world 1</div>
-      <div>hello world 2</div>
-      <div>hello world 3</div>
-      <div>hello world 4</div>
-      <div>hello world 5</div>
-  </div>
+    <div class="container">
+      <div class="bl fl1">1</div>
+      <div class="bl fl2">2</div>
+      <div class="bl fl3">3</div>
+      <div class="bl fl4">4</div>
+      <div class="bl fl5">5</div>
+      <div class="bl fl6">6</div>
+    </div>
 </template>
